--- a/src/main/resources/todo.txt
+++ b/src/main/resources/todo.txt
@@ -19,17 +19,14 @@ Store in linked list messages id and then delete ?
 3. Handle multiple img (think about rule)
 4. Interact with camera to detect exp. date and barcode
 ---------------------------------------------------------------------------
-1. ProcessImageServe -> handleResponse()
+V. ProcessImageServe -> handleResponse()
     Here we need to work with different workflow, and we need gracefully solve it
 2. Train model to detect dates.
     Check research page and train
 3. Create frontend part
 --------------------------------------------------------------------------------
 
-Delete or not delete ?
 
-like we create productScan entry with id, if Waiting for both, we delete entry, then again
-if
 
 
 
